# quazip

./: .gitignore  CMakeLists.txt
.github/docker/qt-5.15.12-ubuntu-static/: Dockerfile
.github/docker/qt-6.4.0/: Dockerfile
.github/docker/qt-6.4.3-ubuntu-static/: Dockerfile
.github/docker/qt-6.6.2-ubuntu-static/: Dockerfile
.github/workflows/: ci.yml  qt-zlib.yml
examples/qmake/: README.md  main.cpp  qmake.pro
qztest/: CMakeLists.txt
